deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-web-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: simple-web-app
  template:
    metadata:
      labels:
        app: simple-web-app
    spec:
      containers:
        - name: simple-web-app
          image: docker.io/ivanb1975/simple-web-app
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
