service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: simple-web-app
  labels:
    app: simple-web-app
spec:
  ports:
  - port: 443
    targetPort: 3000
    name: https
  selector:
    app: simple-web-app
