ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simple-web-app
spec:
  rules:
  - host: "simple-web-app.com"
    http:
      paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: simple-web-app
              port:
                number: 443
